--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "dotenv": "^16.4.4",
     "dotenv-expand": "^11.0.6",
     "eslint": "^8.57.0",
-    "eslint-config-next": "^14.2.4",
     "next": "^13.1.6",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.3",
@@ -33,8 +32,12 @@
   },
   "devDependencies": {
     "concurrently": "^8.2.2",
+    "eslint-config-next": "^15.3.1",
     "eslint-config-prettier": "9.1.0",
     "eslint-plugin-jest": "^28.6.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "jest": "^29.6.2",
     "prettier": "^3.4.1"
   }
