--- a/package.json
+++ b/package.json
@@ -21,31 +21,31 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "async-retry": "^1.3.3",
-    "dotenv": "^16.4.4",
-    "dotenv-expand": "^11.0.6",
-    "eslint": "^8.57.0",
-    "next": "^13.1.6",
-    "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.3",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "async-retry": "1.3.3",
+    "dotenv": "16.4.4",
+    "dotenv-expand": "11.0.6",
+    "eslint": "8.57.0",
+    "next": "13.1.6",
+    "node-pg-migrate": "6.2.2",
+    "pg": "8.11.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.8.1",
-    "@commitlint/config-conventional": "^19.8.1",
-    "commitizen": "^4.3.1",
-    "concurrently": "^8.2.2",
-    "cz-conventional-changelog": "^3.3.0",
-    "eslint-config-next": "^15.3.1",
+    "@commitlint/cli": "19.8.1",
+    "@commitlint/config-conventional": "19.8.1",
+    "commitizen": "4.3.1",
+    "concurrently": "8.2.2",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint-config-next": "15.3.1",
     "eslint-config-prettier": "9.1.0",
-    "eslint-plugin-jest": "^28.6.0",
-    "eslint-plugin-prettier": "^5.1.3",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "husky": "^9.1.7",
-    "jest": "^29.6.2",
-    "prettier": "^3.4.1"
+    "eslint-plugin-jest": "28.6.0",
+    "eslint-plugin-prettier": "5.1.3",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "5.2.0",
+    "husky": "9.1.7",
+    "jest": "29.6.2",
+    "prettier": "3.4.1"
   },
   "config": {
     "commitizen": {
